	* po/zh_CN.po: Update from Funda Wang <fundawang@linux.net.cn>.
	* po/LINGUAS: Add af, nl, sk.
	* hello-*/po/LINGUAS: Update.
	* Makefile.am (EXAMPLESFILES): Add the new message catalogs.

2004-01-10  Bruno Haible  <bruno@clisp.org>

	* hello-c++-kde/admin: New directory, from KDE 3.1.4.
	* hello-c++-kde/auto*.sh: Don't create/remove the contents of the
	admin subdirectory.

2004-01-10  Bruno Haible  <bruno@clisp.org>

	* hello-c/*, hello-c-gnome/*, hello-objc/*, hello-objc-gnome/*,
	hello-c++/*, hello-c++-gnome/*, hello-c++-kde/*: Use the autoconf
	infrastructure from gettext-0.13.1, not 0.12.1.

2004-01-10  Bruno Haible  <bruno@clisp.org>

	* hello-csharp/hello.cs: Work around mono-0.29 CurrentUICulture bug.
	* hello-csharp-forms/hello.cs: Likewise.

2003-12-29  Bruno Haible  <bruno@clisp.org>

	* hello-perl/INSTALL: Mention that libintl-perl-1.09 required.
	* hello-perl/hello-1.pl.in, hello-perl/hello-2.pl.in: Inhibit the
	automatic UTF-8 conversion in UTF-8 locales with Perl-5.8.0. Thanks to
	Guido Flohr.

2003-12-26  Bruno Haible  <bruno@clisp.org>

	* hello-csharp: New subdirectory.
	* hello-csharp-forms: New subdirectory.
	* Makefile.am (EXAMPLESFILES): Add the files in hello-csharp and
	hello-csharp-forms.

2003-12-26  Bruno Haible  <bruno@clisp.org>

	* hello-c++-qt/m4/qt.m4: Quote the first argument of AC_DEFUN.
	* hello-c++-gnome/m4/gtk.m4, hello-c++-gnome/m4/gtk--.m4: Likewise.

2003-12-17  Bruno Haible  <bruno@clisp.org>

	* gettext-0.13.1 released.

2003-12-17  Bruno Haible  <bruno@clisp.org>

	* hello-*/po/LINGUAS: Update.
	* Makefile.am (EXAMPLESFILES): Add the new message catalogs.

2003-12-09  Bruno Haible  <bruno@clisp.org>

	* hello-smalltalk/hello.st.in: Add workaround against PackageLoader
	verbosity. Solution provided by Carey Evans <careye@spamcop.net>.
	* hello-smalltalk/BUGS: Remove file.
	* Makefile.am (EXAMPLESFILES): Update.

2003-12-07  Bruno Haible  <bruno@clisp.org>

	* po/sv.po: New file, from Jan Djärv <jan.h.d@swipnet.se>.